--- a/API/DemoAPI/DemoAPI/DemoAPI.csproj
+++ b/API/DemoAPI/DemoAPI/DemoAPI.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.S3" Version="3.7.1.22" />
     <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.50" />
     <PackageReference Include="Google.Apis.Gmail.v1" Version="1.54.0.2356" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
