feat(event): add trigger S3 event

--- a/FaaS/image-resize-aws/serverless.yml
+++ b/FaaS/image-resize-aws/serverless.yml
@@ -12,3 +12,7 @@ functions:
     handler: handler.resizeImage
     memorySize: 512
     timeout: 30
+    events:
+      - s3:
+          bucket: kyo1-demo
+          event: s3:ObjectCreated:*
