--- a/FaaS/slack-command-gcp/package.json
+++ b/FaaS/slack-command-gcp/package.json
@@ -4,6 +4,6 @@
     "googleapis": "84.0.0"
   },
   "devDependencies": {
-    "serverless-google-cloudfunctions": "4.3.0"
+    "serverless-google-cloudfunctions": "^4.4.0"
   }
 }
