--- a/FaaS/greeting-aws/serverless.yml
+++ b/FaaS/greeting-aws/serverless.yml
@@ -3,13 +3,16 @@ frameworkVersion: '2'
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
+  architecture: arm64
   region: ap-northeast-1
   lambdaHashingVersion: 20201221
 
 functions:
   greeting:
     handler: handler.endpoint
+    memorySize: 128
+    timeout: 20
     events:
       - httpApi:
           path: /message
