--- a/FaaS/mail-aws/serverless.yml
+++ b/FaaS/mail-aws/serverless.yml
@@ -3,7 +3,8 @@ frameworkVersion: '2'
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
+  architecture: arm64
   region: ap-northeast-1
   lambdaHashingVersion: 20201221
 
